--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -23,10 +23,10 @@
   url = "publications/"
   weight = 40
 
-#[[main]]
-#  name = "Blog"
-#  url = "#posts"
-#  weight = 50
+[[main]]
+  name = "Blog"
+  url = "post"
+  weight = 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
